--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
-  <link href="css/kds-style.css" rel="stylesheet">
-  <link href="css/novo-pedido-style.css" rel="stylesheet">
+    <link href="css/kds-style.css" rel="stylesheet">
+    <link href="css/novo-pedido-style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" ng-controller="NavController">
+    <!-- Navbar - Oculta na tela principal -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" ng-controller="NavController" ng-hide="isMainDashboard()">
         <div class="container-fluid">
             <a class="navbar-brand" href="#/">
                 <i class="fas fa-pizza-slice me-2"></i>
@@ -31,6 +31,12 @@
             
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                    <li class="nav-item" ng-if="isAuthenticated">
+                        <a class="nav-link" href="#/">
+                            <i class="fas fa-home me-1"></i>
+                            Dashboard
+                        </a>
+                    </li>
                     <li class="nav-item" ng-if="isAuthenticated">
                         <a class="nav-link" href="#/pedidos">
                             <i class="fas fa-clipboard-list me-1"></i>
@@ -81,7 +87,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container-fluid mt-3">
+    <div ng-class="{'container-fluid mt-3': !isMainDashboard(), 'full-screen': isMainDashboard()}">
         <div ng-view></div>
     </div>
 
@@ -130,6 +136,7 @@
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/pedidosController.js"></script>
     <script src="js/controllers/kdsController.js"></script>
+    <script src="js/controllers/mainDashboardController.js"></script>
     <script src="js/controllers/novoPedidoController.js"></script>
     <script src="js/controllers/produtosController.js"></script>
     <script src="js/controllers/relatoriosController.js"></script>
