ajuste tela main

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div ng-class="{'container-fluid mt-3': !isMainDashboard(), 'full-screen': isMainDashboard()}">
+    <div >
         <div ng-view></div>
     </div>
 
