Implementação completa: Navegação para novo pedido + Modais de confirmação + Documentação de rotas
✨ NOVAS FUNCIONALIDADES:

🔗 Navegação para Novo Pedido:
- Rota configurada com autenticação obrigatória
- Integração perfeita com o dashboard principal

🎯 Sistema de Modais de Confirmação:
- ModalService criado com biblioteca JavaScript customizada
- Modais responsivos com animações suaves
- Diferentes tipos: success, danger, warning, info, primary

📋 Modais Implementados:
- Finalizar Pedido (confirmFinish)
- Cancelar Pedido (confirmDelete)
- Despachar Pedido (confirmDispatch)
- Confirmar Entrega (confirmDeliver)
- Modal genérico (confirmAction)
- Modal de alerta (alert)

🎨 Design dos Modais:
- Overlay com fundo escuro
- Animações de entrada/saída
- Cores contextuais por tipo de ação
- Botões com hover effects
- Fechamento via ESC ou clique no overlay

🗺️ Documentação Completa das Rotas:
- ROTAS.md criado com todas as URLs
- Descrição detalhada de cada rota
- Informações de autenticação e permissões
- Estrutura de arquivos documentada

📱 Rotas Disponíveis:

🔧 Melhorias Técnicas:
- Todas as rotas protegidas com resolve.auth
- Redirecionamento automático para login
- Navbar oculta no dashboard principal
- Integração completa com AngularJS 1.8.2

✅ TESTADO E FUNCIONANDO:
- Navegação entre rotas
- Modais de confirmação responsivos
- Autenticação e redirecionamentos
- Interface touch-friendly

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <script src="js/services/apiService.js"></script>
     <script src="js/services/socketService.js"></script>
     <script src="js/services/toastService.js"></script>
+    <script src="js/services/modalService.js"></script>
     <script src="js/controllers/navController.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/pedidosController.js"></script>
