tela de pedidos e alguns ajustes

--- a/index.html
+++ b/index.html
@@ -880,8 +880,8 @@
   <script src="pages/js/app.providers.spanavigation.js"></script>
   <script src="pages/js/init.service.js"></script>
 
-
-
+  <script src="pages/js/controllers/MainPageController.js"></script>
+ <script src="pages/js/controllers/PedidosPageController.js"></script>
 
 
 </body>
