--- a/index.html
+++ b/index.html
@@ -607,20 +607,21 @@
       <div class="header__inner">
 
         <!-- Brand -->
+      
         <div class="header__brand">
-          <div class="brand-wrap">
+                    <div class="brand-wrap">
+                        <!-- Brand logo -->
+                        <a href="/" class="brand-img stretched-link">
+                           <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 33.867 33.867" xmlns:v="https://vecta.io/nano"><circle cx="26.187" cy="6.85" r="4.349" fill="#f9f906" paint-order="stroke fill markers"/><path d="M7.088 26.91S4.468 8.029 11.884 6.992c6.07-.806 7.084 15.549 9.744 14.188 1.068-.546 1.029-8.163 1.029-8.163s.917.917 3.013 1.197c2.008.268 2.946-.359 2.946-.359s-1.883 12.397-6.678 12.797c-5.269.44-6.454-10.907-9.569-12.649-1.545-.864-3.686 9.795-3.383 12.598-.373.558-1.896.31-1.896.31z" fill="#92e84a" paint-order="stroke fill markers"/></svg>
+                        </a>
 
-            <!-- Brand logo -->
-            <img src="//static.inpaas.com/images/vdo/logo_bus_black_small-389x360.png" class="mini-logo">
-            <!--  -->
-            <!-- Brand title -->
-            <div class="brand-title">
-              <img src="//static.inpaas.com/images/vdo/logo_bus_black_152x62.png" alt="Nifty Logo"
-                class="Nifty logo custom-logo">
-            </div>
+                        <!-- Brand title -->
+                        <div class="brand-title">Parla</div>
 
-          </div>
-        </div>
+                        <!-- You can also use IMG or SVG instead of a text element. -->
+
+                    </div>
+                </div>
         <!-- End - Brand -->
 
         <div class="header__content">
